# Poetry_Qa_Lasha

./: pyproject.toml
